--- a/index.html
+++ b/index.html
@@ -14,80 +14,87 @@
 </head>
 
 <body>
-    <header class="head">
-        <a class="company-title " href="index.html">
-            <img id="logo" src="Img/RoyalMystereLogo.png" title="RoyalMystere" alt="">
-            <h1 class="company-title"> Royal Mystere</h1>
-        </a>
-    </header>
-    <nav>
-        <ul class="navlink">
-            <li class="nav-item"><a class="nav-item" href="index.html">Anasayfa</a></li>
-            <li class="nav-item"><a class="nav-item" href="#">Parfümler</a></li>
-            <li class="nav-item"><a class="nav-item" href="#">Hakkımızda</a></li>
-        </ul>
-    </nav>
 
-    <main>
-
-        <section>
-
-            <h2 class="tanitim">Vazgeçilemezleriniz...</h2>
-            <ul class="products">
-                <li class="products-list">
-                    <figure>    
-
-                        <img src="https://cosmoland.com.tr/marina-de-bourbon-cristal-dor-edp-100-ml-kadin-parfumu-g-9070.jpg" title="RoyalMystere || Afrodit" class="product-image" alt="">
-
-                        <figcaption>
-                            RoyalMystere || Afrodit 
-
-                            <p>Olimpos gecelerinin hazzını yaşayın</p>
-                        </figcaption>
-
-                    </figure>
-                </li>
-                <li class="products-list">
-                    <figure>    
-
-                        <img src="https://www.teonashop.com/class/INNOVAEditor/assets/dior-sauvage-parfum-inceleme.jpeg" title="RoyalMystere || Odin" class="product-image" alt="">
-
-                        <figcaption>
-                            RoyalMystere || Odin 
-
-                            <p>Gücü,odunsu bir havada doruklarınızda keşfedin</p>
-                        </figcaption>
-
-                    </figure>
-                </li>
-                <li class="products-list">
-                    <figure>    
-
-                        <img src="https://productimages.hepsiburada.net/s/358/300-443/110000372437501.jpg" title="RoyalMystere || Ganesha" class="product-image" alt="">
-
-                        <figcaption>
-                            RoyalMystere || Ganesha 
-
-                            <p>Tarçın ve baharatın dansı</p>
-                        </figcaption>
-
-                    </figure>
-                </li>
+    <div class="container">
+        <header class="head">
+            <a class="company-title " href="index.html">
+                <img id="logo" src="Img/RoyalMystereLogo.png" title="RoyalMystere" alt="">
+                <h1 class="company-title"> Royal Mystere</h1>
+            </a>
+        </header>
+        <nav>
+            <ul class="navlink">
+                <li class="nav-item"><a class="nav-item" href="index.html">Anasayfa</a></li>
+                <li class="nav-item"><a class="nav-item" href="#">Parfümler</a></li>
+                <li class="nav-item"><a class="nav-item" href="#">Hakkımızda</a></li>
             </ul>
+        </nav>
 
-        </section>
+        <main>
 
-        <aside>
-            <!-- Buraya reklamlar gelecek -->
-        </aside>
+            <section>
 
-       
-    </main>
+                <h2 class="tanitim">Vazgeçilemezleriniz...</h2>
+                <ul class="products">
+                    <li class="products-list">
+                        <figure>
 
-    <footer>    
+                            <img src="https://cosmoland.com.tr/marina-de-bourbon-cristal-dor-edp-100-ml-kadin-parfumu-g-9070.jpg"
+                                title="RoyalMystere || Afrodit" class="product-image" alt="">
 
-        <h1 class="tanitim">RoyalMystere Company 2023</h1>
-    </footer>
+                            <figcaption>
+                                RoyalMystere || Afrodit
+
+                                <p>Olimpos gecelerinin hazzını yaşayın</p>
+                            </figcaption>
+
+                        </figure>
+                    </li>
+                    <li class="products-list">
+                        <figure>
+
+                            <img src="https://www.teonashop.com/class/INNOVAEditor/assets/dior-sauvage-parfum-inceleme.jpeg"
+                                title="RoyalMystere || Odin" class="product-image" alt="">
+
+                            <figcaption>
+                                RoyalMystere || Odin
+
+                                <p>Gücü,odunsu bir havada doruklarınızda keşfedin</p>
+                            </figcaption>
+
+                        </figure>
+                    </li>
+                    <li class="products-list">
+                        <figure>
+
+                            <img src="https://productimages.hepsiburada.net/s/358/300-443/110000372437501.jpg"
+                                title="RoyalMystere || Ganesha" class="product-image" alt="">
+
+                            <figcaption>
+                                RoyalMystere || Ganesha
+
+                                <p>Tarçın ve baharatın büyülü dansı</p>
+                            </figcaption>
+
+                        </figure>
+                    </li>
+                </ul>
+
+            </section>
+
+            <aside>
+                <!-- Buraya reklamlar gelecek -->
+            </aside>
+
+
+        </main>
+
+        <footer class="foot">
+
+            <h1 class="tanitim">RoyalMystere Company 2023</h1>
+        </footer>
+    </div>
+
 </body>
 
 </html>
